<resources>
    <string name="app_name">Recarga Electronica</string>
    <string name="recarga">RECARGA</string>
    <string name="informe">INFORME</string>
    <string name="usuario">USUARIO</string>
    <string name="configuracion">CONFIG. TERMINAL</string>
    <string name="gprs">CONFIG. GPRS</string>
    <string name="administracion">ADMINISTRACION</string>
    <string name="dlc">DLC</string>
    <string name="formateo">FORMATEAR CONFIG.</string>
    <string name="ok">ACEPTAR</string>
    <string name="cancel">CANCELAR</string>
</resources>
