<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:orientation="vertical">

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuracion"/>

    <Button
        android:id="@+id/btnDonwloadConfig"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dlc"/>

    <Button
        android:id="@+id/btnUsuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"/>

    <Button
        android:id="@+id/btnFormatear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/formateo"/>

</LinearLayout>
