<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jesus.apprecarga.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

   <Button
       android:id="@+id/btnRecarga"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/recarga"/>

    <Button
        android:id="@+id/btnInforme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe"/>

    <Button
        android:id="@+id/btnAdministrador"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/administracion"/>

</LinearLayout>
